<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="通知我">
        <CheckBoxPreference
            android:key="@string/pref_allow_new_program_notification"
            android:defaultValue="true"
            android:title="当有新节目时"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="链接">
        <Preference
            android:title="关于我们">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://www.linht.net.cn"/>
        </Preference>
        <Preference
            android:title="CP-ONE招聘网">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://www.linht.xyz"/>
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="感谢">
        <Preference android:title="\三翼校园"
            android:summary="原型设计">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.sky31.com/"/>
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="贡献">
        <Preference
            android:key="@string/pref_feedback"
            android:title="意见反馈"
            android:summary="向程(ma)序(nong)猿吐槽吧~"/>
        <Preference
            android:key="@string/pref_donate"
            android:title="捐赠支持"
            android:summary="您的支持会让软件得到更久的维护"
            android:defaultValue="@string/alipay_account"/>
        <Preference
            android:title="源码@Github">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/Linht39/DylanRadio"/>
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="关于">
        <Preference
            android:title="开发者"
            android:summary="Dylan">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://www.linht.net.cn"/>
            </Preference>
        <Preference  android:key="@string/pref_check_version" android:title="检查新版本"/>
        <Preference  android:key="@string/pref_build_time" android:title="构建时间"/>
        <Preference  android:key="@string/pref_license" android:title="开放源代码许可"/>
    </PreferenceCategory>
</PreferenceScreen>